--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Sign up form</title>
+    <script defer src="javascript.js"></script>
 </head>
 
 <body>
@@ -42,15 +43,12 @@
                 </div>
                 <div class="form-row">
                     <div class="input-container"><label for="pwd">PASSWORD</label><input type="password" id="pwd"
-                            name="pwd" required>
+                            name="pwd" class="pwd" required>
                     </div>
                     <div class="input-container"><label for="cpwd">CONFIRM PASSWORD</label><input type="password"
                             id="cpwd" name="cpwd" required></div>
                 </div>
-                <span class="pwd-message"></span>
-
-
-
+                <span id="pwd-message"></span>
             </div>
             <div class="button-container"><label for=""></label><button type="submit">Create Account</button>
                 <div class="log-in-link-container">Already have an account? <a href="">Log in</a></div>
